apps/dinum/vfnc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vfnc
  namespace: dinum
  labels:
    app.kubernetes.io/name: vfnc
spec:
  selector:
    app.kubernetes.io/name: vfnc
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
