apps/dinum/vfnc/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vfnc-web
  namespace: dinum
  labels:
    app.kubernetes.io/name: vfnc-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vfnc-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vfnc-web
    spec:
      imagePullSecrets:
        - name: harbor-cicd-secret
      containers:
        - name: web
          image: harbor.valab.top/prod/vfnc-web:main
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: vfnc-web
  namespace: dinum
  labels:
    app.kubernetes.io/name: vfnc-web
spec:
  selector:
    app.kubernetes.io/name: vfnc-web
  ports:
    - name: http
      port: 80
      targetPort: http
